demo-deploy/k8s/overlays/gke/networkpolicy-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ishikari-managed-prometheus
spec:
  podSelector:
    matchLabels:
      app: ishikari
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gke-gmp-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: collector
      ports:
        - port: 9090
          protocol: TCP
